// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`export-default.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
export default (1,
2);

=====================================output=====================================
export default (1, 2);

================================================================================
`;

exports[`expression.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
(a, b);

a, b

=====================================output=====================================
(a, b);

(a, b);

================================================================================
`;

exports[`ignore.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
+
  // prettier-ignore
  (
    (
      first
    )
    ,
    (
      last
    )
  )
;

=====================================output=====================================
+(
  // prettier-ignore
  ((
      first
    )
    ,
    (
      last
    ))
);

================================================================================
`;

exports[`ignored.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
const a = ()=>()=>
// prettier-ignore
(a,b)

=====================================output=====================================
const a = () => () =>
  // prettier-ignore
  (a,b);

================================================================================
`;

exports[`parenthesized.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
console.log(
  /* 1 */
  (
    /* 2 */
    (
      /* 3 */
      first
      /* 4 */
    )
    /* 5 */
    ,
    /* 6 */
    (
      /* 7 */
      last
      /* 8 */
    )
    /* 9 */
  )
  /* 10 */
);

=====================================output=====================================
console.log(
  /* 1 */
  /* 2 */
  (/* 3 */
  first,
  /* 4 */
  /* 5 */
  /* 6 */
  /* 7 */
  last),
  /* 8 */
  /* 9 */
  /* 10 */
);

================================================================================
`;

exports[`parenthesized-trailing-comment.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
const declared = (a, b, c /* comment */);

(a, b, c /* comment */);

assigned = (a, b, c /* comment */);

function f() {
  return (a, b, c /* comment */);
}

const assignInit = (m = n /* comment */);

function g() {
  return (p = q /* comment */);
}

=====================================output=====================================
const declared = (a, b, c /* comment */);

(a, b, c /* comment */);

assigned = (a, b, c /* comment */);

function f() {
  return (a, b, c /* comment */);
}

const assignInit = (m = n /* comment */);

function g() {
  return (p = q /* comment */);
}

================================================================================
`;

exports[`return.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
function a() {
  return (a, b);
  return a, b;
}

=====================================output=====================================
function a() {
  return (a, b);
  return (a, b);
}

================================================================================
`;
